fixed height links

--- a/style.css
+++ b/style.css
@@ -35,12 +35,13 @@ body {
 .nav__list-item {
   margin-left: 20px;
   text-transform: uppercase;
-  padding: 22.5px 0;
 }
 
 .nav__list-link {
   text-decoration: none;
   color: #000;
+  display: inline-block;
+  line-height: 60px;
 }
 
 .nav__list-link:hover {
